[gd_scene load_steps=14 format=2]

[ext_resource path="res://Main_Game_Scene.gd" type="Script" id=1]
[ext_resource path="res://assets/BG3.png" type="Texture" id=2]
[ext_resource path="res://Game_Tiles.tres" type="TileSet" id=3]
[ext_resource path="res://assets/tile_canvas.png" type="Texture" id=4]
[ext_resource path="res://SelectedTile.tres" type="TileSet" id=5]
[ext_resource path="res://assets/selectionring.png" type="Texture" id=6]
[ext_resource path="res://Game_Pieces2.tres" type="TileSet" id=7]
[ext_resource path="res://assets/Nunito-Light.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 36
outline_color = Color( 0.352478, 0.421786, 0.585938, 1 )
extra_spacing_char = 5
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="DynamicFont" id=2]
size = 18
extra_spacing_char = 5
font_data = ExtResource( 8 )

[node name="MainGame" type="Node2D"]
position = Vector2( 3, -1 )
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
margin_left = -22.945
margin_top = -49.2341
margin_right = 1057.05
margin_bottom = 670.766
mouse_filter = 2
texture = ExtResource( 2 )

[node name="GameTiles" type="TileMap" parent="."]
editor/display_folded = true
position = Vector2( 85, 35 )
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 180, 165 )
cell_half_offset = 0
format = 1
tile_data = PoolIntArray( 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 4, 0, 65546, 4, 0, 65547, 4, 0, 65548, 4, 0, 65549, 4, 0, 65550, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 4, 0, 131083, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 0, 0, 327684, 0, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 0, 0, 327689, 0, 0, 327690, 4, 0, 327691, 4, 0, 327692, 4, 0, 327693, 0, 0, 327694, 0, 0, 327695, 4, 0, 327696, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 0, 0, 393220, 3, 0, 393221, 0, 0, 393222, 4, 0, 393223, 4, 0, 393224, 0, 0, 393225, 1, 0, 393226, 0, 0, 393227, 4, 0, 393228, 4, 0, 393229, 0, 0, 393230, 3, 0, 393231, 0, 0, 393232, 4, 0, 393233, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 0, 0, 458756, 0, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 458760, 0, 0, 458761, 0, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 0, 0, 458766, 0, 0, 458767, 4, 0, 458768, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0, 524295, 4, 0, 524296, 4, 0, 524297, 4, 0, 524298, 4, 0, 524299, 4, 0, 524300, 4, 0, 524301, 4, 0, 524302, 4, 0, 524303, 4, 0, 524304, 4, 0, 589826, 4, 0, 589827, 4, 0, 589828, 4, 0, 589829, 4, 0, 589830, 4, 0, 589831, 4, 0, 589832, 4, 0, 589833, 4, 0, 589834, 4, 0, 589835, 4, 0, 589836, 4, 0, 589837, 4, 0, 589838, 4, 0, 589839, 4, 0, 655363, 4, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 720899, 4, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0 )

[node name="BarrierTile" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 16.6667, 0 )
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 303, 2, 146, 163 )

[node name="CaptureTile" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 516.667, 0 )
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 152, 1, 145, 164 )

[node name="ArrowTile" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 1016.67, 0 )
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 304, 170, 145, 164 )

[node name="ArrowTile2" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 2880.54, -75.9333 )
rotation = 1.0472
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 303, 2, 146, 163 )

[node name="ArrowTile3" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 3629.1, 193.215 )
rotation = 2.0944
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 347, 145, 163 )

[node name="ArrowTile4" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 4170.23, 609.27 )
rotation = -2.09439
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 152, 343, 145, 164 )

[node name="ArrowTile5" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 4021.13, 532.937 )
rotation = 3.14159
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 305, 342, 145, 163 )

[node name="ArrowTile6" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 4440.8, 332.189 )
rotation = -1.0472
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 2, 518, 145, 164 )

[node name="SpawnTile" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 1516.67, 0 )
scale = Vector2( 3.33333, 3.33333 )
z_as_relative = false
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 1, 172, 146, 164 )

[node name="BasicTile" type="Sprite" parent="GameTiles"]
visible = false
position = Vector2( 2016.67, 0 )
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 151, 172, 146, 164 )

[node name="SelectedTile" type="TileMap" parent="."]
position = Vector2( 85, 35 )
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 5 )
cell_size = Vector2( 180, 165 )
cell_half_offset = 0
format = 1

[node name="BarrierTile" type="Sprite" parent="SelectedTile"]
position = Vector2( 16.6667, 0 )
scale = Vector2( 3.33333, 3.33333 )
texture = ExtResource( 6 )
centered = false
region_enabled = true
region_rect = Rect2( 303, 2, 146, 163 )

[node name="GamePieces" type="TileMap" parent="."]
position = Vector2( 94, 47 )
scale = Vector2( 0.25, 0.25 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 180, 165 )
cell_half_offset = 0
format = 1
tile_data = PoolIntArray( 65539, 2, 0, 196618, 1, 0, 196619, 0, 0, 196620, 1, 0, 196621, 3, 0, 262155, 2, 0, 262156, 1, 0, 262157, 2, 0, 262158, 0, 0, 327689, 0, 0, 327691, 3, 0, 327692, 0, 0, 327693, 1, 0, 327694, 2, 0, 393228, 0, 0, 393229, 1, 0, 393231, 0, 0, 458764, 0, 0, 458765, 3, 0, 458766, 0, 0 )

[node name="TileData" type="Node" parent="."]

[node name="InGamePopup" type="Node" parent="."]

[node name="PlayerLabel" type="Label" parent="."]
margin_left = 239.242
margin_top = 0.70829
margin_right = 1005.24
margin_bottom = 50.7083
grow_horizontal = 0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.796692, 0.826271, 0.894531, 1 )
text = "0 :: player"
align = 2

[node name="TurnLabel" type="Label" parent="."]
margin_left = 11.0
margin_top = 539.0
margin_right = 503.0
margin_bottom = 589.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.796692, 0.826271, 0.894531, 1 )
text = "turn :: 0"

[node name="PauseButton" type="ToolButton" parent="."]
margin_left = -15.8359
margin_top = -6.15202
margin_right = 182.164
margin_bottom = 51.848
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.733333, 0.772549, 0.854902, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "pause game"
flat = false

[node name="VictoryMenu" type="Node" parent="."]

[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
